# Darr

./: .codacy.yml  .coveragerc  .gitignore  .pyup.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO  TODO.md  appveyor.yml  azure-pipelines.yml  create_examplearrays.py  daaaa  longdescription.md  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  python_package.yml
conda.recipe/: build.sh  meta.yaml
darr/: __init__.py  _version.py  array.py  basedatadir.py  conversion.py  datadir.py  metadata.py  numtype.py  raggedarray.py  readcode.py  readcodearray.py  readcoderaggedarray.py  readcodevardimarray.py  utils.py  vardimarray.py  vlarraylist.py
darr/tests/: __init__.py  test_array.py  test_basedatadir.py  test_conversion.py  utils.py  (+6 more)
darray/: __init__.py  _version.py  array.py  arraylist.py  vlarraylist.py
diskarray/: __init__.py  _version.py  array.py  arraylist.py
docs/: Makefile  api.rst  conf.py  contributing.rst  design.rst  index.rst  make.bat  rationale.rst  readability.rst  readcode.rst  releasenotes.rst  requirements.txt  testing.rst  troubleshooting.rst  tutorial.rst  tutorialarray.rst  tutorialraggedarray.rst
examplearray.da/: README.txt  arraydescription.json  metadata.json
examplearray.darr/: README.txt  arraydescription.json  metadata.json
examplearrays/: README.rst  create_examplearrays.py
src/: __init__.py  readcoderaggedarray.py
tests/: test_array.py  test_basedatadir.py  test_datadir.py  test_numtype.py  test_raggedarray.py  test_utils.py
(+282 files in other folders)
